# meeting_helper

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/pa/chan/meeting_helper/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/pa/chan/meeting_helper/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/pa/chan/meeting_helper/: ExampleUnitTest.kt
core/audio/: build.gradle.kts
core/audio/src/androidTest/java/pa/chan/audio/: ExampleInstrumentedTest.kt
core/audio/src/main/java/pa/chan/audio/: AudioRecorder.kt  AudioRecorderService.kt
core/audio/src/test/java/pa/chan/audio/: ExampleUnitTest.kt
core/database/: build.gradle.kts
core/database/src/androidTest/java/pa/chan/database/: ExampleInstrumentedTest.kt
core/database/src/test/java/pa/chan/database/: ExampleUnitTest.kt
core/domain/src/main/java/pa/chan/domain/: MyClass.kt
core/ml/: build.gradle.kts
core/ml/src/androidTest/java/pa/chan/ml/: ExampleInstrumentedTest.kt
core/ml/src/main/cpp/: CMakeLists.txt  ml.cpp  whisper_jni.cpp
core/ml/src/main/java/pa/chan/ml/: WhisperEngine.kt
core/ml/src/test/java/pa/chan/ml/: ExampleUnitTest.kt
core/network/: build.gradle.kts
core/network/src/androidTest/java/pa/chan/network/: ExampleInstrumentedTest.kt
feature/history/: build.gradle.kts
feature/recorder/: build.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+5 files in other folders)
